--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Panakeia Bootstrap</title>
+	<title>Panakeia Bootstrap 4 - Responsive Version</title>
 
 	<!--Awesome Fonts-->
 	<link rel="stylesheet" type="text/css"	href="assets/css/font-awesome.min.css" />
