--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Panakeia Bootstrap 4 - Responsive Version</title>
+	<title>Panakeia Bootstrap</title>
 
 	<!--Awesome Fonts-->
 	<link rel="stylesheet" type="text/css"	href="assets/css/font-awesome.min.css" />
@@ -93,6 +93,10 @@
 								</div>
 							</div>
 						</div>
+							
+				<div class="read-box">
+					<a href="" class="readmore">Read more</a>
+				</div>
 					</div>
 				</div>
 			</div>
