--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 		<!--Footer Section Start-->
 		
 		<!--Go To Top-->
-		<a href="#" class="go-top hide"><i class="fa fa-long-arrow-up"></i></a>
+			<a href="#" id="go-top"><span></span></a>
 
 
 		<!--JQuery Library-->
